# mgeocpp

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: mgeocpp_testcases.cpp
src/MGEOcpp/: MGEOcpp.hpp  MGEOcppMain.hpp
